force-app/main/default/objects/Issue_Mapping__c/Issue_Mapping__c.object-meta.xml
<CustomObject>
    <label>Issue Mapping</label>
    <nameField>
        <displayFormat>IM-{0000000000}</displayFormat>
        <label>Issue Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>