force-app/main/default/objects/Issue_Mapping__c/fields/Issue_Bug__c.field-meta.xml
<CustomField>
    <fullName>Issue_Bug__c</fullName>
    <label>Issue/Bug</label>
    <referenceTo>Issue_Bug__c</referenceTo>
    <relationshipLabel>Issue Mappings</relationshipLabel>
    <relationshipName>Issue_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>