force-app/main/default/objects/Issue_Mapping__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Issue Mappings</relationshipLabel>
    <relationshipName>Issue_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>