force-app/main/default/objects/Issue_Mapping__c/fields/Tasks__c.field-meta.xml
<CustomField>
    <fullName>Tasks__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tasks.</label>
    <referenceTo>Tasks__c</referenceTo>
    <relationshipLabel>Issue Mappings</relationshipLabel>
    <relationshipName>Issue_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>